Add docker registry

--- a/deploy/docker/prod/docker-compose.traefik.yml
+++ b/deploy/docker/prod/docker-compose.traefik.yml
@@ -24,6 +24,19 @@ services:
       - "traefik.http.routers.dashboard.middlewares=auth"
       - "traefik.http.middlewares.auth.basicauth.users=${AUTH_USERS}"
 
+  traefik-certs-dumper:
+    image: ldez/traefik-certs-dumper
+    entrypoint: sh -c '
+      apk add jq
+      ; while ! [ -e /data/acme.json ]
+      || ! [ `jq ".[] | .Certificates | length" /data/acme.json` != 0 ]; do
+      sleep 1
+      ; done
+      && traefik-certs-dumper file --version v2 --watch
+      --source /data/acme.json --dest /data/certs'
+    volumes:
+      - ~/deploy/data/traefik/letsencrypt:/data
+
 networks:
   webgateway:
     external:
