--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -49,7 +49,11 @@ ext.isDockerBuild = {
 
 
 ext.isJibDockerBuild = {
-    return isRunTask(['jib', 'jibDockerBuild', 'buildLocalImage', 'buildLocalImages'])
+    return isRunTask(['jib', 'jibDockerBuild', 'buildLocalImage',
+                      'buildLocalImages',
+                      'buildRegistryImage',
+                      'buildRegistryImages',
+    ])
 }
 
 
