Fix missing SBA http service

--- a/config/gradle/bootappProject.gradle
+++ b/config/gradle/bootappProject.gradle
@@ -43,9 +43,8 @@ if (!isStartupOrPackage()) {
 
 apply plugin: "java"
 apply plugin: 'application'
-apply from: "${gradleConfigDir}/tasks.gradle"
-
-processResources.dependsOn copyConfiguration
+//apply from: "${gradleConfigDir}/tasks.gradle"
+//processResources.dependsOn copyConfiguration
 
 
 
