--- a/deploy/docker/prod/docker-compose.traefik.yml
+++ b/deploy/docker/prod/docker-compose.traefik.yml
@@ -19,9 +19,20 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.dashboard.rule=Host(`${GATEWAY_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.dashboard.entrypoints=https"
+      - "traefik.http.routers.dashboard.tls=true"
+      - "traefik.http.routers.dashboard.tls.certResolver=certer"
 #      - "traefik.http.routers.dashboard.rule=(PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.middlewares=auth"
+
+      - "traefik.http.routers.dashboard1.rule=Host(`${GATEWAY_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.dashboard1.entrypoints=http"
+      - "traefik.http.routers.dashboard1.service=api@internal"
+      - "traefik.http.routers.dashboard1.middlewares=auth"
+      - "traefik.http.middlewares.https-redirect.redirectscheme.scheme=https"
+      - "traefik.http.routers.dashboard1.middlewares=https-redirect"
+
       - "traefik.http.middlewares.auth.basicauth.users=${AUTH_USERS}"
 
   traefik-certs-dumper:
