--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -7,10 +7,10 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '25.1-jre'
 //    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
 //    implementation group: 'org.jetbrains', name: 'annotations', version: '13.0'
-//    implementation group: 'javax.inject', name: 'javax.inject', version: '1'
+//    implementation group: 'jakarta.inject', name: 'jakarta.inject', version: '1'
 
-// https://mvnrepository.com/artifact/javax.inject/javax.inject-api
-//    implementation group: 'javax.inject', name: 'javax.inject-api', version: '2.0.1'
+// https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api
+//    implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
 
 
 //    compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
@@ -18,7 +18,7 @@ dependencies {
 
     implementation(FlycatLibVersion.jakarta_inject_api)
 
-//    implementation group: 'javax.annotation', name: 'javax.annotation-api ', version: '1.3.2'
+//    implementation group: 'jakarta.annotation', name: 'jakarta.annotation-api ', version: '1.3.2'
 
 //    implementation 'org.javassist:javassist:3.21.0-GA'
 //    implementation 'org.reflections:reflections:0.9.9-RC2'
