--- a/flycat-datasource/flycat-ds-hikari/build.gradle
+++ b/flycat-datasource/flycat-ds-hikari/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     implementation project(':flycat-ds')
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
 
-//    implementation group: 'javax.validation', name: 'validation-implementation ', version: '2.0.1.Final'
+//    implementation group: 'jakarta.validation', name: 'validation-implementation ', version: '2.0.1.Final'
 }
 
 
