Fix native compile

--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -100,7 +100,7 @@ ext.ignoredEnv = {
 
 ext.isStartupOrPackage = {
 //    return isRunTask(['bootRun', 'jib', 'jibDockerBuild','buildLocalImages'])
-    return isRunTask(['bootRun']) || isDockerBuild()
+    return isRunTask(['nativeCompile']) || isRunTask(['bootRun']) || isDockerBuild()
 }
 
 
