--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -44,7 +44,7 @@ ext.isRunTask = { tasks ->
 
 ext.isDockerBuild = {
 //    return isRunTask(['jib', 'jibDockerBuild', 'buildLocalImages'])
-    return isJibDockerBuild()
+    return isJibDockerBuild() || isRunTask(['bootBuildImage'])
 }
 
 
