--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -59,6 +59,7 @@ ext.isJibDockerBuild = {
 
 //processAot
 ext.isNativeTask = {
+//    return isRunTask(['nativeCompile', 'processAot', 'bootBuildImage'])
     return isRunTask(['nativeCompile', 'processAot'])
 }
 
