--- a/config/gradle/springbootProject.gradle
+++ b/config/gradle/springbootProject.gradle
@@ -2,4 +2,8 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.springframework.boot'
 bootJar.enabled = false
 
+dependencies {
+}
+
+
 
