--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -101,7 +101,7 @@ ext.ignoredEnv = {
 
 ext.isStartupOrPackage = {
 //    return isRunTask(['bootRun', 'jib', 'jibDockerBuild','buildLocalImages'])
-    return isRunTask(['nativeCompile']) || isRunTask(['bootRun']) || isDockerBuild()
+    return isRunTask(['nativeCompile']) || isRunTask(['bootRun']) || isDockerBuild() || isRunTask(['main()'])
 }
 
 
