Add mysql time zone

--- a/deploy/docker/common/docker-compose.mysql.yml
+++ b/deploy/docker/common/docker-compose.mysql.yml
@@ -17,6 +17,7 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_TCP_PORT: ${MYSQL_PORT}
+      TZ: ${TIME_ZONE}
     ports:
       - '${MYSQL_PORT}:${MYSQL_PORT}'
 
