--- a/deploy/docker/prod/docker-compose.traefik.yml
+++ b/deploy/docker/prod/docker-compose.traefik.yml
@@ -18,7 +18,7 @@ services:
       - ~/deploy/data/traefik/log:/var/log/traefik
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.dashboard.rule=Host(`${GATEWAY_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.dashboard.rule=Host(`${GATEWAY_DOMAIN}`) && (PathPrefix(`/api/`) || PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard.entrypoints=https"
       - "traefik.http.routers.dashboard.tls=true"
       - "traefik.http.routers.dashboard.tls.certResolver=certer"
@@ -26,7 +26,7 @@ services:
       - "traefik.http.routers.dashboard.service=api@internal"
       - "traefik.http.routers.dashboard.middlewares=auth"
 
-      - "traefik.http.routers.dashboard1.rule=Host(`${GATEWAY_DOMAIN}`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))"
+      - "traefik.http.routers.dashboard1.rule=Host(`${GATEWAY_DOMAIN}`) && (PathPrefix(`/api/`) || PathPrefix(`/dashboard`))"
       - "traefik.http.routers.dashboard1.entrypoints=http"
       - "traefik.http.routers.dashboard1.service=api@internal"
       - "traefik.http.routers.dashboard1.middlewares=auth"
