--- a/deploy/docker/prod/docker-compose.traefik.yml
+++ b/deploy/docker/prod/docker-compose.traefik.yml
@@ -43,9 +43,11 @@ services:
       sleep 1
       ; done
       && traefik-certs-dumper file --version v2 --watch
-      --source /data/acme.json --dest /data/certs'
+      --source /data/acme.json --dest /data/certs
+      --post-hook "sh /hook.sh"'
     volumes:
       - ~/deploy/data/traefik/letsencrypt:/data
+      - ./hook.sh:/hook.sh
 
 networks:
   webgateway:
