Fix skaffold build

--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -53,8 +53,11 @@ ext.isJibDockerBuild = {
                       'buildLocalImages',
                       'buildRegistryImage',
                       'buildRegistryImages',
+                      '_jibSkaffoldFilesV2',
+                      '_skaffoldFailIfJibOutOfDate'
     ])
 }
+
 
 
 //processAot
