--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -42,19 +42,25 @@ ext.isRunTask = { tasks ->
     return false
 }
 
-ext.isDockerBuild = {
+ext.isBuildImage = {
 //    return isRunTask(['jib', 'jibDockerBuild', 'buildLocalImages'])
-    return isJibDockerBuild() || isRunTask(['bootBuildImage'])
+    return isJibBuildImage() || isRunTask(['bootBuildImage'])
 }
 
 
-ext.isJibDockerBuild = {
+ext.isSkaffoldBuild = {
+    return isRunTask([
+                      '_jibSkaffoldFilesV2',
+                      '_skaffoldFailIfJibOutOfDate'
+    ])
+}
+
+
+ext.isJibBuildImage = {
     return isRunTask(['jib', 'jibDockerBuild', 'buildLocalImage',
                       'buildLocalImages',
                       'buildRegistryImage',
                       'buildRegistryImages',
-                      '_jibSkaffoldFilesV2',
-                      '_skaffoldFailIfJibOutOfDate'
     ])
 }
 
@@ -104,7 +110,12 @@ ext.ignoredEnv = {
 
 ext.isStartupOrPackage = {
 //    return isRunTask(['bootRun', 'jib', 'jibDockerBuild','buildLocalImages'])
-    return isRunTask(['nativeCompile']) || isRunTask(['bootRun']) || isDockerBuild() || isRunTask(['main()'])
+    return isRunTask(['nativeCompile']) || isRunTask(['bootRun']) || isBuildImage() || isRunTask(['main()']) || isSkaffoldBuild()
+}
+
+ext.isStartupOrPackagingExcludingImageBuild = {
+//    return isRunTask(['bootRun', 'jib', 'jibDockerBuild','buildLocalImages'])
+    return isRunTask(['nativeCompile']) || isRunTask(['bootRun']) || isRunTask(['main()'])
 }
 
 
@@ -113,7 +124,7 @@ ext.isStartupFromCode = {
 }
 
 ext.isStartupFromDocker = {
-    return isDockerBuild()
+    return isBuildImage()
 }
 
 //if (executingTasks == null || executingTasks.isEmpty()
@@ -125,7 +136,7 @@ ext.isStartupFromDocker = {
 //}
 
 if (!hasProperty("profile")) {
-    if (isDockerBuild()) {
+    if (isBuildImage()) {
         ext.profile = "docker" + env
     } else {
 //        println("Check ${isNativeTask()}")
